GreenNao/greennao/log/build_2025-04-10_14-22-44/greennao/stderr.log
  File "/home/evichan/Desktop/2024-tfg-eva-fernandez/GreenNao/greennao/install/greennao/lib/python3.10/site-packages/greennao/GreenNaoLib.py", line 14
    def start()
               ^
SyntaxError: expected ':'

